tests/ui/issues/issue-3668-non-constant-value-in-constant/issue-3668.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-3668.rs:8:34
   |
LL |        static childVal: Box<P> = self.child.get();
   |                                  ^^^^ non-constant value
   |
help: consider using `let` instead of `static`
   |
LL -        static childVal: Box<P> = self.child.get();
LL +        let childVal: Box<P> = self.child.get();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0435`.
